<resources>
    <string name="app_name">Task</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="status">Status</string>
    <string name="salvar">Salvar</string>
    <string name="entendi">Entendi</string>
    <string name="descricao">Descrição</string>
    <string name="atencao">Atenção</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="detalhes">Detalhes</string>
    <string name="confirmar">Confirmar</string>
    <string name="deseja_sair">Deseja sair da sua conta?</string>
    <string name="editando_task">Editando Tarefa</string>
    <string name="aperte_confirmar_sair_conta">Aperte confirmar para sair da conta.</string>
    <string name="digite_email">Digite seu email</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="recuperar_conta">Recuperar conta</string>
    <string name="nova_tarefa">Nova tarefa</string>
    <string name="email_obrigatorio">Email obrigatorio</string>
    <string name="senha_obrigatorio">Senha obrigatoria</string>
    <string name="descricao_obrigatorio">Descricao obrigatoria</string>
    <string name="descricao_hint_input">Exemplo: estudar materia</string>
    <string name="erro_registrar">Erro ao registrar o usuário</string>
    <string name="erro_logar">Erro ao logar o usuário</string>
    <string name="erro_recuperar">Erro ao recuperar o usuário</string>
    <string name="erro_generico">Ocorreu um erro! Tente novamente</string>
    <string name="sem_task">Nenhuma tarefa encontrada</string>
    <string name="removeu_task">Removeu tarefa com sucesso!</string>
    <string name="deseja_remover">Deseja remover essa tarefa?</string>
    <string name="aperte_confirmar_remover_tarefa">Aperte confirmar para remover tarefa</string>
    <string name="carregando_task">Aguarde! Carregando as tarefas…</string>
    <string name="salvo_sucesso">Tarefa salva com sucesso!</string>
    <string name="atualizada_sucesso">Tarefa atualizada com sucesso!</string>
    <string name="enviou_link_recuperacao">Enviei um link para redefinir sua senha.</string>
    <string name="informe_email_cadastrado">Informe seu email de cadastro para receber \num link para redefinir sua senha.</string>


    <string name="description_botao_add_tarefa">Botão add nova tarefa</string>

    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feito</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--     Erros Firebase Authentication -->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>


</resources>