<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/textDescriptionCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Texto Titulo Card" />

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@+id/buttonEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonEdit"
                app:tint="@color/color_default"
                android:importantForAccessibility="no" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRemove"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@drawable/background_button"
                android:text="@string/remover"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:backgroundTint="@color/color_delete"
                app:layout_constraintBottom_toBottomOf="@+id/buttonEdit"
                app:layout_constraintEnd_toStartOf="@+id/buttonEdit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonEdit" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_button"
                android:text="@string/editar"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:backgroundTint="@color/color_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonDetails"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonRemove"
                app:layout_constraintTop_toBottomOf="@+id/textDescriptionCard" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDetails"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@drawable/background_button"
                android:text="@string/detalhes"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:backgroundTint="@color/color_details"
                app:layout_constraintBottom_toBottomOf="@+id/buttonEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonEdit"
                app:layout_constraintTop_toTopOf="@+id/buttonEdit" />

            <ImageButton
                android:id="@+id/buttonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_next"
                app:layout_constraintBottom_toBottomOf="@+id/buttonEdit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonEdit"
                app:tint="@color/color_default" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>